--- a/templates/style.css
+++ b/templates/style.css
@@ -18,6 +18,7 @@ hr {
     border: 0; 
     height: 1px; 
     background-color: #dee2e6; 
+    margin: 20px 0; 
 }
 
 /* --- estilos do formulário --- */
